--- a/Frontend/todos.html
+++ b/Frontend/todos.html
@@ -22,6 +22,7 @@
                 <th>Description</th>
                 <th>Priority</th>
                 <th>Complete</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody id="todoBody">
